--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -1,4 +1,18 @@
 \ejercicio
+Dado el conjunto $A = \set{1,2,3}$, determinar cuáles de las siguientes afirmaciones son verdaderas
+
+\begin{multicols}{5}
+	\begin{enumerate}[label=(\roman*)]
+		\item $1 \en A $
+		\item $\set{1} \subseteq A $
+		\item $\set{2,1} \subseteq A $
+		\item $\set{1,3} \en A $
+		\item $\set{2} \en A $
+	\end{enumerate}
+\end{multicols}
+
+\separadorCorto
+
 $A = \set{1,2,3}$
 \begin{multicols}{2}
 	\begin{enumerate}[label=(\roman*)]
