--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -1,5 +1,29 @@
 \ejercicio
-$A = \set{1,2,\set{3},\set{1,2}}$
+
+Dado el conjunto $A = \set{1,2,\set{3},\set{1,2}}$,
+determinar cuáles de las siguientes afirmaciones son verdaderas:\\
+
+\separadorCorto
+
+\begin{multicols}{2}
+	\begin{enumerate}[label=(\roman*)]
+		\item $3 \en A         $
+		\item $\set{3} \subseteq A $
+		\item $\set{3} \en A    $
+		\item $\set{\set{3}} \en A $
+		\item $\set{1,2} \en A $
+		\item $\set{1,2} \subseteq A  $
+		\item $\set{\set{1,2}} \subseteq A  $
+		\item $\set{\set{1,2}, 3} \subseteq A  $
+		\item $\vacio \en A  $
+		\item $\vacio \subseteq A  $
+		\item $A \en A  $
+		\item $A \subseteq A  $
+	\end{enumerate}
+\end{multicols}
+
+\separadorCorto
+
 \begin{multicols}{2}
 	\begin{enumerate}[label=(\roman*)]
 		\item $3 \en A       \flecha{respueta} \text{F}  $
