--- a/2-guia/2-sol.tex
+++ b/2-guia/2-sol.tex
@@ -1,11 +1,8 @@
-% Preambulo donde están los paquetes que tienen
-% los comandos que se usan en el código.
 \input{../macros/preamble-general.tex}
 
-% Algunos paquetes quizás exclusivos de este archivo que no
-% quiero poner en el preamble-general
-% el día de mañana podría integrarse
-\usetikzlibrary{external,angles,quotes}
+% Definiciones y macros para que se me haga
+% más ameno el codeo.
+\input{../macros/definiciones.tex}
 
 % Local acá que se usa mucha inducción
 \def\V{\text{ verdadera }}
@@ -15,120 +12,14 @@
 
 \begin{document}
 
+% IMPORTANTE
+% Estos valores son lo único referente a la guía en particular
+\def\guia{2} % <-- El número de la guía
+\def\cantidadEjerciciosGuia{20}
+\def\cantidadEjerciciosExtras{1}   % <-- Modificar si se agrega un ejercicio EXTRA
 
-% Info para armar título.
-\title{Práctica 2 de álgebra 1} % título
-\author{Comunidad algebraica} % autor
-\date{última compilacion: \today} % Cambiar de ser necesario
-
-% \maketitle  % Para que aprezca el título en el documento
-
-\input{./teoria-2/teoria-2.tex}
-
-\subsubsection*{Ejercicio de la clase del 12/4}
-Sea $(a_n)_{n \en \naturales_0}$ con
-$\llave{l}{
-		a_0 = 1\\
-		a_1 = 3\\
-		a_n = a_{n-1} - a_{n-2}\ \paratodo n \geq 2
-	}$
-\begin{enumerate}[label=(\alph*)]
-	\item Probar que $a_{n+6} = a_n$\\
-	      Por inducción: \boxed{p(n):   a_{n+6} = a_n \paratodo n \geq \naturales_0 \V?}\\
-	      $\llave{l}{
-		      \textit{ Caso Base:} \text{ Primero notar que,} \\
-		      \to
-		      \llaves{l}{
-			      a_0 = 1\\
-			      a_1 = 3\\
-			      a_2 \eqDef= 2\\
-			      a_3 \eqDef= -1\\
-			      a_4 \eqDef= -3\\
-			      a_5 \eqDef= -2
-		      } \to
-		      \llaves{l}{
-			      a_6 \eqDef= 1\\
-			      a_7 \eqDef= 3\\
-			      a_8 \eqDef= 2\\
-			      a_9 \eqDef= -1\\
-			      a_{10} \eqDef= -3\\
-			      a_{11} \eqDef= -2
-		      } \to
-		      \cdots \text{ Se ve que tiene un período de 6 elementos.}\\
-
-		      p(n=2) \V? \to a_8 \eq?= a_2 \Tilde\\
-
-		      \textit{Paso inductivo: } \text{Supongo } p(k) \V \entonces p(k+1) \V?\\
-		      \textit{Hipótesis inductiva: }
-		      \text{Supongo } a_{k+6} = a_k \paratodo k \in \naturales_0 \V ,\, \qvq a_{k+7} = a_{k+1}\\
-		      \red{a_{k+7}} \eqDef=
-		      a_{k+6} - a_{k+5} \stacktext{HI}{=}
-		      a_k - a_{k+5} \eqDef=
-		      a_k - (\ub{ a_k + a_{k+4}}{a_{k+5}}) = -a_{k+4}\\
-		      \to \red{a_{k+7}} = -a_{k+4} \eqDef=
-		      -(a_{k+3} - a_{k+2}) \eqDef =
-		      - ( a_{k+2} - \red{a_{k+1}} - a_{k+2} ) = \red{a_{k+1}} \Tilde
-		      }\\
-	      $\\
-	      Como $p(0) \y p(1) \y \cdots p(5)$ son verdaderas y $p(k)$ es verdadera así como $p(k+1)$ también lo es, por el principio de inducción $p(n)$ es verdadera $\paratodo n \in \naturales_0$
-
-	\item Calcular $\sumatoria{k=0}{255} a_k$ \\
-	      $\sumatoria{k=0}{255} a_k =
-		      \underbrace{\textstyle a_0 + a_1 + a_2 + a_3 + a_4 + a_5}_{= 0} +
-		      \underbrace{\textstyle a_6 + a_7 + a_8 + a_9 + a_{10} + a_{11} }_{=0} +
-		      \cdots +
-		      a_{252} + a_{253} + a_{254} + a_{255}
-	      $\\
-	      En la sumatoria hay \red{256 términos}. $256 = 42 \cdot 6 + 4$ por lo tanto van a haber 42 bloques que dan 0 y sobreviven los últimos 4 términos.
-	      $\sumatoria{k=0}{255} a_k = \underbrace{\textstyle 0 + 0 + \dots + 0}_{42 \text{ ceros}} + a_{252} + a_{253} + a_{254} + a_{255} =
-		      \cancel{a_{252}} + a_{253} + a_{254} + \cancel{a_{255}} = a_{253} + a_{254} = 5\\
-	      $ Donde usé que: $a_n =
-		      \llave{rcl}{
-			      1 & \text{si} & n\mod6 = 0 \\
-			      3 & \text{si} & n\mod6 = 1 \\
-			      2 & \text{si} & n\mod6 = 2 \\
-			      -1 & \text{si} & n\mod6 = 3 \\
-			      -3 & \text{si} & n\mod6 = 4 \\
-			      -2 & \text{si} & n\mod6 = 5 \\
-		      }\longrightarrow
-	      $
-	      \boxed{\sumatoria{k=0}{255} a_k = 5} \Tilde
-\end{enumerate}
-
-\separador
-
-Sea $(a_n)_{n\en \naturales}$ la sucesión definida por:
-$a_1 = 1 \y a_{n+1} = \parentesis{\sqrt{a_n} - (n+1)}^2, \, \paratodo n \en \naturales$.
-Voy a encontrar la fórmula general.
-
-$
-	\llave{ l }{
-		a_1 = 1,\, a_2 = (1 - 2)^2,\, a_3 = 4,\, a_4 = 4,\, a_5 = 9,\, \dots\\
-		a_n =
-		\llave{l}{
-			\parentesis{\frac{n+2}{3}^2} \text{si $n$ es impar}\\
-			\parentesis{\frac{n}{3}^2} \text{si $n$ es par}\\
-		}\\
-		\to \text{ Se muestra por inducción } \hacer\\
-	}$
-
-
-\separador
-
-Sea $(a_n)_{n\en \naturales}$ la sucesión definida por: $a_1 = 3, a_2 = 9 \y a_{n+2} = a+{n+1}+ 3a_n +3^{3+1},\, \paratodo n \en \naturales$\\
-Tengo que encontrar el término general de esta  sucesión definida por recurrencia.
-$a_1 =3, a_2 = 9. a_3 = a_2 + 3a_1 + 3^2=27 \to$ pinta ser $a_n = 3^n$. \\
-Interesante que acá la HI dependería de muchos términos. Así que ahora viene una versión
-cambiada del principio de inducción.\\
-
-\section*{Ejercicios de la guía}
-\setcounter{ejercicio}{0}
-
-% Para hacer un input de todos los archivos en la
-% carpeta de "ejercicio-2"
-% ATENCION: Al agregar un ejercicio hay que modificar el loop de manera acorde
-\foreach \x in {1,...,17} {
-    \input{./ejercicios-2/ej-\x-2}
-  }
+\input{../macros/encabezado-pie.tex}
+\input{../macros/indice.tex}
+\input{../macros/estructura-ejercicios.tex}
 
 \end{document}
