--- a/1-guia/ejercicios-1/ej-17-1.tex
+++ b/1-guia/ejercicios-1/ej-17-1.tex
@@ -1,4 +1,42 @@
-\ejercicio Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Verificar las siguientes
+\def\diecisietei{
+	\begin{tikzpicture}[scale=0.5, >=Latex, draw=Aquamarine]
+		%A vértices
+		\node (1a) {$\bullet$};
+		\node[] at (1a.west) {1};
+		\node[below=of 1a] (2a) {$\bullet$};
+		\node[] at (2a.west) {2};
+		\node[below=of 2a] (3a) {$\bullet$};
+		\node[] at (3a.west) {3};
+		\node[shape=ellipse, draw, black, minimum size=2cm,fit={(1a) (3a)}] {};
+
+		%B vértices
+		\node[right=2cm of 1a] (1b) {$\bullet$};
+		\node[] at (1b.east) {1};
+		\node[below=of 1b] (3b) {$\bullet$};
+		\node[] at (3b.east) {3};
+		\node[below=of 3b] (5b) {$\bullet$};
+		\node[] at (5b.east) {5};
+		\node[below=of 5b] (7b) {$\bullet$};
+		\node[] at (7b.east) {7};
+		\node[shape=ellipse, draw, black, minimum size=2cm,fit={(1b) (7b)}] {};
+
+		% Elipses
+		\node[below=1cm of 3a] {$A$};
+		\node[below=1.2cm of 7b] {$B$};
+
+		% Aristas
+		\draw[->, bend left] (1a) to (1b);
+		\draw[->, bend right] (1a) to (3b);
+		\draw[->, bend right] (1a) to (7b);
+		\draw[->, bend right] (3a) to (1b);
+		\draw[->, bend right] (3a) to (5b);
+	\end{tikzpicture}
+}
+
+
+
+\ejercicio
+Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Verificar las siguientes
 relaciones de $A$ y $B$ y en caso afirmativo graficarlas por medio de un diagrama
 con flechas de $A$ en $B$ y por medio de puntos en el producto cartesiano $A \times B$.
 
