--- a/1-guia/ejercicios-1/ej-20-1.tex
+++ b/1-guia/ejercicios-1/ej-20-1.tex
@@ -1,4 +1,48 @@
-\ejercicio Sea $A = \set{1, 2, 3, 4, 5, 6}$. Graficar la relación, $\relacion= {(1,1), (1,3), (3,1), (3,3), (6,4), (4,6), (4,4), (6,6)}$
+%Graficos
+\def\veinte{
+	\begin{tikzpicture}[scale=0.5, baseline=0, >=Latex, draw=Aquamarine]
+
+		\node[] (1) {$\bullet$};
+		\node[] at (1.west) {$1$};
+
+		\node[above right= of 1] (2) {$\bullet$};
+		\node[] at (2.east) {$2$};
+
+		\node[below right= of 2] (3) {$\bullet$};
+		\node[] at (3.east) {$3$};
+
+		\node[below= of 1] (4) {$\bullet$};
+		\node[] at (4.west) {$4$};
+
+		\node[right= of 2] (5) {$\bullet$};
+		\node[] at (5.west) {$5$};
+
+		\node[right= of d] (6) {$\bullet$};
+		\node[] at (6.east) {$6$};
+
+
+		% Universo
+		\node[shape=ellipse, draw, black, fit={ (1) (2) (3) (4)}] (universo) {};
+		\node[above left = 0.1cm of universo] {$A$};
+
+		% Aristas
+		\draw[->, loop below] (1) to (1);
+		\draw[->, loop above ] (3) to (3);
+		\draw[->, loop above] (4) to (4);
+		\draw[->, loop below ] (6) to (6);
+
+		\draw[->, bend left] (6.center) to (4);
+		\draw[->, bend left] (4.center) to (6);
+
+		\draw[->, bend right] (1.center) to (3);
+		\draw[->, bend right] (3.center) to (1);
+	\end{tikzpicture}
+}
+% fin gráficos
+
+\ejercicio 
+Sea $A = \set{1, 2, 3, 4, 5, 6}$. Graficar la relación, $\relacion= {(1,1), (1,3), (3,1), (3,3), (6,4), (4,6), (4,4), (6,6)}$
+
 \begin{minipage}{0.25\textwidth}
 	\veinte
 \end{minipage}
