--- a/1-guia/ejercicios-1/ej-27-1.tex
+++ b/1-guia/ejercicios-1/ej-27-1.tex
@@ -1,4 +1,59 @@
+%Graficos
+\def\veintisiete{
+	\begin{tikzpicture}[scale=0.5, baseline=0, >=Latex, draw=Aquamarine]
+
+		\node[] (1) {$\bullet$};
+		\node[] at (1.west) {$1$};
+
+		\node[right = of 1] (92) {$\bullet$};
+		\node[] at (92.east) {$92$};
+
+		\node[below = of 1] (2) {$\bullet$};
+		\node[] at (2.west) {$2$};
+
+		\node[right = of 2] (91) {$\bullet$};
+		\node[] at (91.east) {$91$};
+
+		\node[below right = .5 of 2] (puntos) {$\vdots$};
+
+		\node[below left = .5 of puntos] (45) {$\bullet$};
+		\node[] at (45.west) {$45$};
+
+		\node[right = of 45] (47) {$\bullet$};
+		\node[] at (47.east) {$47$};
+
+
+		\node[below right =.5 of 45] (46) {$\bullet$};
+		\node[] at (46.east) {$46$};
+
+
+		% Universo
+    \node[shape=ellipse, draw, black, fit={ (1) (92) (45) (47) (46)}] (universo) {};
+		\node[above left = 0.1cm of universo] {$A$};
+
+		% Aristas
+		\draw[->, loop below] (1) to (1);
+		\draw[->, loop below ] (92) to (92);
+
+		\draw[->, loop below] (2) to (2);
+		\draw[->, loop below ] (91) to (91);
+
+		\draw[->, loop below] (45) to (45);
+		\draw[->, loop below ] (47) to (47);
+
+		\draw[->, loop below ] (46) to (46);
+
+		\draw[->, bend left] (1.center) to (92);
+		\draw[->, bend left] (92.center) to (1);
+		\draw[->, bend left] (2.center) to (91);
+		\draw[->, bend left] (91.center) to (2);
+		\draw[->, bend left] (45.center) to (47);
+		\draw[->, bend left] (47.center) to (45);
+	\end{tikzpicture}
+}
+
 \ejercicio
+
 Sean $A = \set{n \en \naturales \talque n \leq 92}$ y
 $\relacion$ la relación en $A$ definida por
 $x \relacion y \sisolosi x^2 - y^2 = 93x - 93y$
