Add indice, refactorizacion

--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -6,11 +6,10 @@
 
 %phantomsection -> para poder saltar a un lugar sin un anchor.
 \vspace{4cm}
-\hypertarget{indice-\guia}{Choose your destiny:}\\
+\hypertarget{indice-\guia}{Choose your destiny:}
 
 \begin{itemize}
 	\item \hyperlink{teoria-\guia}{Notas teóricas}
-
 
 	\item
 	      Ejercicios de la guía:
