--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -1,13 +1,22 @@
 % Info para armar título.
-\title{Álgebra I \\ Práctica \guia\ resuelta} % título
-\author{Por alumnos de Álgebra I} % autores
-\date{última compilacion: \today} % Cambiar de ser necesario
+
+\title{Álgebra I\\ Práctica \guia\ resuelta} % título
+\author{Por alumnos de Álgebra I\\
+Facultad de Ciencias Exactas y Naturales \\
+UBA} % autores
+\date{} % Cambiar de ser necesario
 \maketitle  % para que aprezca el título en el documento
+% \thispagestyle{empty} % activo los headers y footers
+% \thispagestyle{fancy} % activo los headers y footers
+% \fancyfoot{} % borro lo que haya en los headers
+% \fancyfoot[C]{Facultad de Ciencias Exactas y Naturales - Universidad de Buenos Aires} % link índice
+
 
 \thispagestyle{empty} % borro el número de la primera página
 
 \pagestyle{fancy} % activo los headers y footers
 \fancyhead{} % borro lo que haya en los headers
+\fancyfoot{} % borro lo que haya en los headers
 \fancyhead[L]{Álgebra I} % borro lo que haya en los headers
 \fancyhead[C]{Práctica \guia}
 \fancyhead[R]{Página \thepage} % borro lo que haya en los headers
