Fecha de actualización en pie de página Corrijo extra-2-2.tex

--- a/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
@@ -79,7 +79,7 @@ $
       \sumatoria{k=1}{j + 1} \frac{3}{j + k} - \frac{3}{j+1} + \frac{3}{2j+2} + \frac{3}{2j+3} =
       \sumatoria{k=1}{j + 1} \frac{3}{j + k} \ub{- \frac{3}{2k+2} + \frac{3}{2j+3}}{\leq 0}
       \stackrel{HI}\leq
-      \frac{5}{2}  - \ub{\frac{3}{(2k+2)(2k+3)}}{\leq 0 } \leq \frac{5}{2} 
+      \frac{5}{2}  - \ub{\frac{3}{(2k+2)(2k+3)}}{\geq 0 } \leq \frac{5}{2} 
       \entonces 
     \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k} \leq \frac{5}{2} \text{ Verdadera } \Tilde
 $
