--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -168,8 +168,5 @@
 
 %Update time
 \def\update{
-	\vspace{1cm}
-	\separador
-	\separador
-	\text{Última compilación: }\today\ a las \currenttime
+	updated: \today
 }
