--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -3,23 +3,19 @@
 \title{Álgebra I\\ Práctica \guia\ resuelta} % título
 \author{Por alumnos de Álgebra I\\
 Facultad de Ciencias Exactas y Naturales \\
-UBA} % autores
-\date{} % Cambiar de ser necesario
-\maketitle  % para que aprezca el título en el documento
-% \thispagestyle{empty} % activo los headers y footers
-% \thispagestyle{fancy} % activo los headers y footers
-% \fancyfoot{} % borro lo que haya en los headers
-% \fancyfoot[C]{Facultad de Ciencias Exactas y Naturales - Universidad de Buenos Aires} % link índice
-
+UBA} % autores y lugar
+\date{} % Así no aparece la fecha 
+\maketitle  % para que aparezca el título en el documento
 
 \thispagestyle{empty} % borro el número de la primera página
 
 \pagestyle{fancy} % activo los headers y footers
 \fancyhead{} % borro lo que haya en los headers
 \fancyfoot{} % borro lo que haya en los headers
-\fancyhead[L]{Álgebra I} % borro lo que haya en los headers
-\fancyhead[C]{Práctica \guia}
-\fancyhead[R]{Página \thepage} % borro lo que haya en los headers
+\fancyhead[L]{Álgebra I} % encabezado izquierdo
+\fancyhead[C]{Práctica \guia} % encabezado central
+\fancyhead[R]{Página \thepage} %% encabezado derecho
 
-\fancyfoot[L]{\href{https://github.com/nad-garraz/algebraUno}{\faIcon{github} ¿algún error?¿cómo aportar?}} % Link REPO
-\fancyfoot[R]{\hyperlink{indice-\guia}{Ir a índice}} % link índice
+\fancyfoot[L]{\small \href{https://github.com/nad-garraz/algebraUno}{\faIcon{github} ¿algún error?¿cómo aportar?}} % pie Izquierdo
+\fancyfoot[C]{\small \update} % pie central
+\fancyfoot[R]{\small \hyperlink{indice-\guia}{Ir a índice}} % pie derecho
