Fix error extra-2-2.tex

--- a/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-2-2.tex
@@ -11,10 +11,9 @@ $p(n): \sumatoria{k=1}{n+1} \frac{3}{n+k} \leq \frac{5}{2}  \paratodo n \en \nat
 \textit{Caso base: $p(1)$:}\\
 $
 	\sumatoria{k=1}{\magenta{1}+1} \frac{3}{\magenta{1} + k} =
-	\frac{3}{2} + \frac{3}{4} =
-	\frac{9}{4}
-	\leq
-	\frac{10}{4} =
+	\frac{3}{2} + \frac{3}{3} =
+	\frac{5}{2}
+	\stackrel{\checkmark}\leq
 	\frac{5}{2}
 	\to
 	p(1) \text{ Verdadera} \Tilde
@@ -81,7 +80,9 @@ $
       \stackrel{HI}\leq
       \frac{5}{2}  - \ub{\frac{3}{(2k+2)(2k+3)}}{\geq 0 } \leq \frac{5}{2} 
       \entonces 
-    \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k} \leq \frac{5}{2} \text{ Verdadera } \Tilde
+    \sumatoria{k=1}{j + 2} \frac{3}{j+1 + k}
+    \stackrel{\checkmark}\leq
+    \frac{5}{2} \text{ Verdadera } \Tilde
 $
 
 Dado que $p(1),\, p(j), p(j+1)$ resultaron verdaderas por principio de inducción  también lo es $p(n) \paratodo n \en \naturales$.
