--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -16,6 +16,9 @@ UBA} % autores y lugar
 \fancyhead[C]{Práctica \guia} % encabezado central
 \fancyhead[R]{Página \thepage} %% encabezado derecho
 
-\fancyfoot[L]{\small \href{https://github.com/nad-garraz/algebraUno}{\faIcon{github} ¿algún error?¿cómo aportar?}} % pie Izquierdo
+\fancyfoot[L]{
+  \small \href{https://github.com/nad-garraz/algebraUno}{\faIcon{github} Aportar}\\ 
+         \href{https://t.me/+1znt2GV1i8cwMTNh}{\faIcon{telegram} ¿Errores? Contanos.}
+          } % pie Izquierdo
 \fancyfoot[C]{\small \update} % pie central
 \fancyfoot[R]{\small \hyperlink{indice-\guia}{Ir a índice}} % pie derecho
