--- a/2-guia/2-sol.tex
+++ b/2-guia/2-sol.tex
@@ -1,7 +1,6 @@
 \input{../macros/preamble-general.tex}
 
-% Definiciones y macros para que se me haga
-% más ameno el codeo.
+% Definiciones y macros para que se me haga más ameno el codeo.
 \input{../macros/definiciones.tex}
 
 % Local acá que se usa mucha inducción
@@ -12,14 +11,13 @@
 
 \begin{document}
 
-% IMPORTANTE
-% Estos valores son lo único referente a la guía en particular
+% IMPORTANTE: Estos valores son lo único referente a la guía en particular.
 \def\guia{2} % <-- El número de la guía
 \def\cantidadEjerciciosGuia{20}
 \def\cantidadEjerciciosExtras{2}   % <-- Modificar si se agrega un ejercicio EXTRA
 
-\input{../macros/encabezado-pie.tex}
-\input{../macros/indice.tex}
-\input{../macros/estructura-ejercicios.tex}
+\input{../macros/encabezado-pie.tex}          % <-- Inyecto código de encabezado y pie
+\input{../macros/indice.tex}                  % <-- Inyecto código del índice y carátula
+\input{../macros/estructura-ejercicios.tex}   % <-- Inyecto código teoría, ejercicios y ejercicio extra
 
 \end{document}
